--- a/src/components/AdminDashboard/AdminDashboard.css
+++ b/src/components/AdminDashboard/AdminDashboard.css
@@ -38,3 +38,26 @@
       border-radius: 20px;
       font-size:.84rem;
     }
+
+    .btn_edit{
+      border: none;
+      padding: 8px 25px;
+      text-transform: capitalize;
+      background-image: linear-gradient(180deg, #f5e618, #fae20a);
+      box-shadow: #f3ca146e 0px 3px 54px;
+      color: #fff;
+      font-weight: 400;
+      border-radius: 20px;
+      font-size:.84rem;
+    }
+    .btn_view{
+      border: none;
+      padding: 8px 25px;
+      text-transform: capitalize;
+      background-image: linear-gradient(180deg, #71f524, #69f518);
+      box-shadow: #72e630b9 0px 3px 54px;
+      color: #fff;
+      font-weight: 400;
+      border-radius: 20px;
+      font-size:.84rem;
+    }
