--- a/src/components/AllEvents/AllEvents.css
+++ b/src/components/AllEvents/AllEvents.css
@@ -28,6 +28,7 @@
     border-radius: 30px;
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     padding: 2rem;
@@ -65,7 +66,7 @@
     left: 30px;
     right: 30px;
     width: 85%;
-    height: 6rem;
+    height: 8rem;
     border-radius: 30px;
     display: flex;
     flex-direction: column;
@@ -83,7 +84,7 @@
 .s_love_con{
     width: 60px;
     height: 30px;
-    top: -273px;
+    top: -253px;
     right: 0;
     position:absolute;
     border-radius:30px;
@@ -110,4 +111,44 @@
     font-weight: 400;
     border-radius: 20px;
     font-size:.84rem;
+  }
+
+  /* responsive  */
+  @media (max-width: 368px){
+    .s_Img_con .s_overlay{
+        position: absolute;
+        bottom: 20px;
+        left: 30px;
+        right: 30px;
+        width: 210px;
+        height: 8rem;
+        border-radius: 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: left;
+        color: #333;
+        transition: all 0.5s ease-in-out;
+        background-color: #fff;
+    }
+  }
+  @media (max-width: 468px){
+    .s_Img_con .s_overlay{
+        position: absolute;
+        bottom: 20px;
+        left: 30px;
+        right: 30px;
+        width: 210px;
+        height: 8rem;
+        border-radius: 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: left;
+        color: #333;
+        transition: all 0.5s ease-in-out;
+        background-color: #fff;
+    }
   }
