--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,14 +7,19 @@
 }
 .img_container {
     position: relative;
-    transition: all 0.4s ease-in-out;
+    transition: all 0.5s ease-in-out;
     overflow: hidden;
     border-radius: 15px;
+    /* width: 400px;
+    height: 500px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .img_container .feature_left {
-    /* width: 100%;
-    height: 32rem; */
+    width: 400px;
+    height: 500px;
     object-fit: cover;
     border-radius: 15px;
     transition: all 0.2s ease-in-out;
@@ -27,8 +32,8 @@
 .overlay {
     position: absolute;
     bottom: 0;
-    right: 0;
-    left: 0;
+    right: 25px;
+    left: 25px;
     display: flex;
     flex-direction: column;
     padding: 0 1rem;
