--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -28,6 +28,7 @@
     border-radius: 30px;
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     padding: 2rem;
